--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -21,10 +21,11 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item"><a href="{% url 'webapp:index' %}" class="nav-link">На главную</a></li>
+            <li class="nav-item"><a href="{% url 'webapp:statistic' %}" class="nav-link">Статистика</a></li>
             {% block menu %}{% endblock %}
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a href="{% url 'webapp:basket' %}" class="nav-link">Корзина ({{ request.session.products_count }})</a></li>
+            <li class="nav-item"><a href="{% url 'webapp:basket' %}" class="nav-link">Корзина ({{ request.session.products_count|default:0 }})</a></li>
             {% if request.user.is_authenticated %}
                 <li class="nav-item"><a href="{% url 'accounts:detail' request.user.pk %}" class="nav-link">
                     Привет, {{ request.user.username }}!
