--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -22,6 +22,7 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a href="{% url 'webapp:index' %}" class="nav-link">На главную</a></li>
             <li class="nav-item"><a href="{% url 'webapp:statistic' %}" class="nav-link">Статистика</a></li>
+            <li class="nav-item"><a href="{% url 'webapp:order_list' %}" class="nav-link">Заказы</a></li>
             {% block menu %}{% endblock %}
         </ul>
         <ul class="navbar-nav ml-auto">
