--- a/source/webapp/templates/product/detail.html
+++ b/source/webapp/templates/product/detail.html
@@ -1,17 +1,27 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}{{ product.name }}{% endblock %}
 {% block content %}
     <div class="text-center">
         <h1>{{ product.name }}</h1>
         <div class="row">
-            <div class="col col-12 col-sm-10 col-md-8 col-lg-6 m-auto">
-                <img src="{{ product.photo.url }}" class="img-fluid" alt="{{ product.name }}">
-            </div>
+            {% if product.photo %}
+                <div class="col col-12 col-sm-10 col-md-8 col-lg-6 m-auto">
+                    <img src="{{ product.photo.url }}" class="img-fluid" alt="{{ product.name }}">
+                </div>
+            {% else %}
+                <div class="col col-12 col-sm-10 col-md-8 col-lg-6 m-auto">
+                    <img src="{% static 'images/no_foto.png' %}" class="img-fluid" alt="{{ product.name }}">
+                </div>
+            {% endif %}
+
         </div>
         <p><b>Категория:</b> {{ product.get_category_display }}</p>
         <p><b>Цена:</b> {{ product.price }} сом</p>
         <p><b>В наличии:</b> {{ product.in_order|yesno:"Да,Нет" }}</p>
-        <p><a href="{% url 'webapp:basket_change' %}?pk={{ product.pk }}&action=add&next={% url "webapp:product_detail" product.pk %}" class="btn btn-primary">В корзину</a></p>
+        <p>
+            <a href="{% url 'webapp:basket_change' %}?pk={{ product.pk }}&action=add&next={% url "webapp:product_detail" product.pk %}"
+               class="btn btn-primary">В корзину</a></p>
         <p><a href="{% url 'webapp:product_update' product.pk %}" class="btn btn-primary">Изменить</a></p>
         <p><a href="{% url 'webapp:product_delete' product.pk %}" class="btn btn-danger">Нет в наличии</a></p>
     </div>
