--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Товары{% endblock %}
 {% block menu %}
     <li class="nav-item"><a href="{% url 'webapp:product_create' %}" class="nav-link">Добавить товар</a></li>
@@ -9,7 +10,11 @@
         {% for product in product_list %}
             <div class="col col-3">
                 <div class="card">
-                    <img src="{{ product.photo.url }}" class="card-img-top" alt="{{ product.name }}">
+                    {% if product.photo %}
+                        <img src="{{ product.photo.url }}" class="card-img-top" alt="{{ product.name }}">
+                    {% else %}
+                        <img src="{% static 'images/no_foto.png' %}" class="card-img-top" alt="{{ product.name }}">
+                    {% endif %}
                     <div class="card-body">
                         <h5 class="card-title">{{ product.name }}</h5>
                         <p class="card-text">{{ product.get_category_display }} | {{ product.price }} сом</p>
