Добавлено создание и редактирование заказа.

--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -23,6 +23,7 @@
             <li class="nav-item"><a href="{% url 'webapp:index' %}" class="nav-link">На главную</a></li>
             <li class="nav-item"><a href="{% url 'webapp:statistic' %}" class="nav-link">Статистика</a></li>
             <li class="nav-item"><a href="{% url 'webapp:order_list' %}" class="nav-link">Заказы</a></li>
+            <li class="nav-item"><a href="{% url 'webapp:create_order' %}" class="nav-link">Создать заказ</a></li>
             {% block menu %}{% endblock %}
         </ul>
         <ul class="navbar-nav ml-auto">
