--- a/source/webapp/templates/order/detail.html
+++ b/source/webapp/templates/order/detail.html
@@ -12,6 +12,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'webapp:order_deliver' order.pk %}">Отметить как доставлен</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'webapp:update_order' order.pk %}">Редактировать</a>
+                </li>
             </ul>
         </div>
         <div class="card-body">
@@ -20,12 +23,31 @@
             <p class="card-text"><small>Контактные данные: </small>{{ order.email }} {{ order.phone }}</p>
             <p class="card-text"><small>Дата создания заказа: </small>{{ order.created_at|date:'d.m.Y' }}</p>
             <p class="card-text"><small>Статус заказа: </small>{{ order.get_status_display }}</p>
-            <p class="card-text"><small>Продукты в заказе: </small>
-                {% for order in order.products.all %}
-                    <span>{{ order }}, </span>
-                {% endfor %}
 
-            </p>
+            <table class="table col-4 offset-4">
+                <thead>
+                <tr>
+                    <th scope="col">Товары в заказе</th>
+                    <th scope="col">Количество</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>
+                        {% for product in order.products.all %}
+                            <p>{{ product }}</p>
+                            {% empty %}
+                            <small>Пока нет товаров</small>
+                        {% endfor %}
+                    </td>
+                     <td>
+                        {% for product_in_order in order.order_products.all %}
+                            <p>{{ product_in_order.amount }}</p>
+                        {% endfor %}
+                    </td>
+                </tr>
+                </tbody>
+         </table>
         </div>
     </div>
 {% endblock %}
