--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -22,8 +22,12 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a href="{% url 'webapp:index' %}" class="nav-link">На главную</a></li>
             <li class="nav-item"><a href="{% url 'webapp:statistic' %}" class="nav-link">Статистика</a></li>
-            <li class="nav-item"><a href="{% url 'webapp:order_list' %}" class="nav-link">Заказы</a></li>
-            <li class="nav-item"><a href="{% url 'webapp:create_order' %}" class="nav-link">Создать заказ</a></li>
+            {% if perms.webapp.view_order %}
+                <li class="nav-item"><a href="{% url 'webapp:order_list' %}" class="nav-link">Заказы</a></li>
+            {% endif %}
+            {% if perms.webapp.add_order %}
+                <li class="nav-item"><a href="{% url 'webapp:create_order' %}" class="nav-link">Создать заказ</a></li>
+            {% endif %}
             {% block menu %}{% endblock %}
         </ul>
         <ul class="navbar-nav ml-auto">
