--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -2,7 +2,9 @@
 {% load static %}
 {% block title %}Товары{% endblock %}
 {% block menu %}
-    <li class="nav-item"><a href="{% url 'webapp:product_create' %}" class="nav-link">Добавить товар</a></li>
+    {% if perms.webapp.add_product %}
+        <li class="nav-item"><a href="{% url 'webapp:product_create' %}" class="nav-link">Добавить товар</a></li>
+    {% endif %}
 {% endblock %}
 {% block content %}
     <h1 class="text-center">Товары</h1>
