--- a/source/webapp/templates/product/detail.html
+++ b/source/webapp/templates/product/detail.html
@@ -22,7 +22,9 @@
         <p>
             <a href="{% url 'webapp:basket_change' %}?pk={{ product.pk }}&action=add&next={% url "webapp:product_detail" product.pk %}"
                class="btn btn-primary">В корзину</a></p>
-        <p><a href="{% url 'webapp:product_update' product.pk %}" class="btn btn-primary">Изменить</a></p>
-        <p><a href="{% url 'webapp:product_delete' product.pk %}" class="btn btn-danger">Нет в наличии</a></p>
+        {% if perms.webapp.change_product and perms.webapp.delete_product %}
+            <p><a href="{% url 'webapp:product_update' product.pk %}" class="btn btn-primary">Изменить</a></p>
+            <p><a href="{% url 'webapp:product_delete' product.pk %}" class="btn btn-danger">Нет в наличии</a></p>
+        {% endif %}
     </div>
 {% endblock %}
